# internship-discovery-engine

./: .env  .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  test-search.yml
src/internship_engine/: __init__.py  active_check.py  categorization.py  cli.py  config.py  deduplication.py  extractor.py  location_filter.py  models.py  sheets.py  tracks.py
src/internship_engine/sources/: __init__.py  brave_search.py  google_search.py
tests/: conftest.py  test_active_check.py  test_brave_search.py  test_categorization.py  test_config.py  test_deduplication.py  test_extractor.py  test_google_search.py  test_location_filter.py  test_pipeline_fallback.py  test_sheets.py  test_tracks.py
