[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "internship-discovery-engine"
version = "0.1.0"
description = "A tool to discover and track internship opportunities."
requires-python = ">=3.11"
license = {text = "MIT"}
readme = "README.md"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "gspread>=6.0",
    "google-auth>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "responses>=0.25",
]

[project.scripts]
internship-engine = "internship_engine.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
